# THORMANG3_WS

./: .gitignore  git_thormang3.sh
PIONEER-ROBOT/: Untitled-Note
PIONEER-ROBOT/pioneer_dragging/: CMakeLists.txt  package.xml
PIONEER-ROBOT/pioneer_dragging/config/: dragging_params.yaml
PIONEER-ROBOT/pioneer_dragging/data/: 1-discrete_cob.pth  2-inc_dec_stop.pth  3-inc_dec_stop.pth
PIONEER-ROBOT/pioneer_dragging/launch/: dragging_rl.launch  gazebo_dragging.launch  reinforcement_learning_dragging.launch  rl_dragging.launch
PIONEER-ROBOT/pioneer_dragging/scripts/: deepQlearn.py  display_data.py  environment.py  foot_state.py  gazebo_connection.py  main_dragging.py  plot_sensor.py  test_dragging.py  testing.py  train_dragging.py  utility.py  walk_testing.py
PIONEER-ROBOT/pioneer_dynamic/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_dynamic/scripts/: dynamic_wolf.py  example_class.py
PIONEER-ROBOT/pioneer_kinematics/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_main/: CMakeLists.txt  package.xml
PIONEER-ROBOT/pioneer_main/config/: thormang3_align_keyboard_ws.yaml  thormang3_keyboard_cfg.yaml  thormang3_typing_ws.yaml  thormang3_workspace.json
PIONEER-ROBOT/pioneer_main/launch/: align_keyboard.launch  cross_arm.launch  draw_graph.launch  mind_no.launch  placement_keyboard.launch  typing.launch  wolf_walk.launch
PIONEER-ROBOT/pioneer_main/other/: demo_cross_arm.py  demo_pickup_keyboard.py  demo_trajectory.py  main_mind_no.py  scan_lidar_ws.py
PIONEER-ROBOT/pioneer_main/scripts/: main.py  test.py
PIONEER-ROBOT/pioneer_motion/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_motion/config/: init_pose.yaml  thormang3_bear_motion_bin.yaml  thormang3_wolf_motion_bin.yaml
PIONEER-ROBOT/pioneer_motor/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_sensors/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_simulation/scripts/: placement_actual.py
PIONEER-ROBOT/pioneer_utils/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_utils/scripts/: amplify_db.py
PIONEER-ROBOT/pioneer_vision/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_vision/launch/: pionner_web_cam.launch
PIONEER-ROBOT/pioneer_vision/scripts/: aruco_class.py  aruco_vision.py  calibration.py  robot_cam.py  screen_recording.py  tripod_cam.py
PIONEER-ROBOT/pioneer_walking/: CMakeLists.txt  package.xml  setup.py
PIONEER-ROBOT/pioneer_yolov3/: CMakeLists.txt  package.xml
PIONEER-ROBOT/pioneer_yolov3/config/: yolov3-tiny-chip.cfg  yolov3.cfg
PIONEER-ROBOT/pioneer_yolov3/data/: yolov3_seminar.py
PIONEER-ROBOT/pioneer_yolov3/scripts/: yolov3.py  yolov3_chip.py  yolov3_class.py  yolov3_placement.py  yolov3_seminar.py
ROBOTIS-THORMANG-Common/thormang3_description/launch/: thormang3_opc.launch
ROBOTIS-THORMANG-Common/thormang3_description/urdf/: thormang3.gazebo  (+1 more)
ROBOTIS-THORMANG-OPC/: .gitignore  .thormang3_opc.rosinstall  .travis.yml  README.md
ROBOTIS-THORMANG-OPC/thormang3_action_script_player/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_action_script_player/list/: action_script.yaml
ROBOTIS-THORMANG-OPC/thormang3_action_script_player/src/: action_script_player.cpp
ROBOTIS-THORMANG-OPC/thormang3_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_demo/config/: balance_param.yaml
ROBOTIS-THORMANG-OPC/thormang3_demo/include/thormang3_demo/: main_window.hpp  qnode.hpp
ROBOTIS-THORMANG-OPC/thormang3_demo/launch/: thormang3_demo.launch
ROBOTIS-THORMANG-OPC/thormang3_demo/src/: main.cpp  main_window.cpp  qnode.cpp
ROBOTIS-THORMANG-OPC/thormang3_demo/ui/: main_window.ui
ROBOTIS-THORMANG-OPC/thormang3_foot_step_generator/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_foot_step_generator/include/thormang3_foot_step_generator/: message_callback.h  robotis_foot_step_generator.h
ROBOTIS-THORMANG-OPC/thormang3_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_navigation/launch/: map_server_thormang.launch  thormang3_footstep_planner.launch
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/include/thormang3_offset_tuner_client/: main_window.hpp  qnode.hpp
ROBOTIS-THORMANG-OPC/thormang3_offset_tuner_client/src/: main.cpp  main_window.cpp  qnode.cpp
ROBOTIS-THORMANG-OPC/thormang3_opc/: CHANGELOG.rst  package.xml
ROBOTIS-THORMANG-OPC/thormang3_tuner_client/: CMakeLists.txt  package.xml
ROBOTIS-THORMANG-OPC/thormang3_tuner_client/include/thormang3_tuner_client/: main_window.hpp  qnode.hpp
ROBOTIS-THORMANG-OPC/thormang3_tuner_client/launch/: tm3_tuner_client.launch
ROBOTIS-THORMANG-OPC/thormang3_tuner_client/src/: main.cpp  main_window.cpp  qnode.cpp
ROBOTIS-THORMANG-OPC/thormang3_tuner_client/ui/: main_window.ui
ROBOTIS-THORMANG-OPC/thormang3_walking/: CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Tools/: README.md
ROBOTIS-THORMANG-Tools/thormang3_action_editor/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Tools/thormang3_action_editor/config/: config_mirror_joint.yaml
ROBOTIS-THORMANG-Tools/thormang3_action_editor/include/thormang3_action_editor/: action_editor.h
ROBOTIS-THORMANG-Tools/thormang3_action_editor/launch/: thormang3_action_editor.launch
ROBOTIS-THORMANG-Tools/thormang3_action_editor/src/: action_editor.cpp  main.cpp
ROBOTIS-THORMANG-Tools/thormang3_offset_tuner_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROBOTIS-THORMANG-Tools/thormang3_offset_tuner_server/include/thormang3_offset_tuner_server/: thormang3_offset_tuner_server.h
ROBOTIS-THORMANG-Tools/thormang3_offset_tuner_server/launch/: thormang3_offset_tuner_server.launch
ROBOTIS-THORMANG-Tools/thormang3_offset_tuner_server/src/: main.cpp  thormang3_offset_tuner_server.cpp
ROBOTIS-THORMANG-Tools/thormang3_tools/: CHANGELOG.rst  package.xml
ROBOTIS-THORMANG-msgs/thormang3_manipulation_module_msgs/: CMakeLists.txt
(+191 files in other folders)
