<?xml version="1.0"?>
<package format="2">
  <name>thormang3_action_script_player</name>
  <version>0.3.0</version>
  <description>
    This package provides a action script playing for thormang3.
    It can be used with thormang3_action_module and ros_mpg321_player.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_action_script_player</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>thormang3_action_module_msgs</depend>
  <depend>boost</depend>
  <depend>yaml-cpp</depend>
</package>
