<?xml version="1.0"?>
<package format="2">
  <name>thormang3_offset_tuner_client</name>
  <version>0.3.0</version>
  <description>
     The GUI program that can adjust offset of THORMANG3.
     It is used with the thormang3_offset_tuner_server.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_offset_tuner_client</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>thormang3_offset_tuner_msgs</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <depend>yaml-cpp</depend>
</package>
