<?xml version="1.0"?>
<package format="2">
  <name>thormang3_opc</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the thormang3_opc (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_opc</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>thormang3_action_script_player</exec_depend>
  <exec_depend>thormang3_demo</exec_depend>
  <exec_depend>thormang3_foot_step_generator</exec_depend>
  <exec_depend>thormang3_navigation</exec_depend>
  <exec_depend>thormang3_offset_tuner_client</exec_depend>
  <export><metapackage/></export>
</package>
