<?xml version="1.0"?>
<package format="2">
  <name>thormang3_tuner_client</name>
  <version>0.3.0</version>
  <description>
     robotis_tuner_client
  </description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!--url type="website">http://wiki.ros.org/thormang3_tuner_client</url-->
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>yaml-cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>thormang3_tuning_module_msgs</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
</package>
